Configurado pagina de Reset Senha

--- a/src/pages/reset-password/reset-password.html
+++ b/src/pages/reset-password/reset-password.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>ResetPassword</ion-title>
+    <ion-title>Reset de senha</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,17 +17,17 @@
   <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
     <ion-item>
       <ion-label stacked>Email</ion-label>
-      <ion-input formControlName="email" type="email" placeholder="Your email address"
+      <ion-input formControlName="email" type="email" placeholder="Seu email aqui"
         [class.invalid]="!resetPasswordForm.controls.email.valid && blur">
       </ion-input>
     </ion-item>
     <ion-item class="error-message" *ngIf="!resetPasswordForm.controls.email.valid  &&
     resetPasswordForm.controls.email.dirty">
-      <p>Please enter a valid email.</p>
+      <p>Insira um email valido!</p>
     </ion-item>
 
     <button ion-button block type="submit" [disabled]="!resetPasswordForm.valid">
-      Reset your Password
+      Resetar senha!
     </button>
 
   </form>
