--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content padding>
+
   <button ion-button block color="primary" (click)="goToCreate()">
     Create a new Event
   </button>
@@ -17,4 +18,21 @@
   <button ion-button block color="primary" (click)="goToList()">
     See your events
   </button>
+
+  <button ion-button block color="primary" (click)="goGirias()">
+    Girias
+  </button>
+
+  <button ion-button block color="primary" (click)="goPhrasal()">
+    Phrasal Verbs
+  </button>
+
+  <button ion-button block color="primary" (click)="goExpressao()">
+    Expressão Idiomatica
+  </button>
+
+  <button ion-button block color="primary" (click)="goDitado()">
+    Ditado Popular
+  </button>
+
 </ion-content>
