Adicionado Componentes Search e Criado Pagina Splash

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home Page</ion-title>
+    <ion-title>Pagina Inicial</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="goToProfile()">
         <ion-icon name="person"></ion-icon>
@@ -10,7 +10,16 @@
 </ion-header>
 
 <ion-content padding>
+<!--
+TESTE
+-->
 
+<h1 id="home-heading1" style="color:#000000;font-weight:400;text-align:center;">Bem-vindo ao TraduTOP</h1>
+<h1 id="home-heading2" style="color:#000000;text-align:center;">😂👌🏻🔝</h1>
+
+<!--
+TESTE
+-->
   <button ion-button block color="primary" (click)="goToCreate()">
     Create a new Event
   </button>
