Definindo Cards das paginas e Teste Splash

--- a/src/pages/girias/girias.html
+++ b/src/pages/girias/girias.html
@@ -22,4 +22,28 @@
     </ion-item>
   </ion-list>
 
+  <ion-card>
+    <ion-card-header>
+      All mouth and no trousers
+    </ion-card-header>
+    <ion-card-content>
+      Toda a boca e sem calças.
+    </ion-card-content>
+    <ion-card-header>
+      Significado
+    </ion-card-header>
+    <ion-card-content>
+      Todas as conversas, sem ação.
+    </ion-card-content>
+    <ion-card-header>
+      Exemplo
+    </ion-card-header>
+    <ion-card-content>
+      Todas as Dont listen to him. Hes all mouth and no trousers, sem ação.
+    </ion-card-content>
+    <ion-card-content>
+      Não o escute. Ele é toda boca e sem calças.
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
