--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,4 +44,8 @@ TESTE
     Ditado Popular
   </button>
 
+  <button ion-button block color="primary" (click)="goApresentacao()">
+    Teste Splash
+  </button>
+
 </ion-content>
