Ajustado Cards Dinamicos com JSON Local

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,7 +33,7 @@ TESTE
   </button>
 
   <button ion-button block color="primary" (click)="goPhrasal()">
-    Phrasal Verbs
+    Phrasal Verbsr
   </button>
 
   <button ion-button block color="primary" (click)="goExpressao()">
