--- a/src/pages/girias/girias.html
+++ b/src/pages/girias/girias.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
 
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-searchbar (ionInput)="getItems($event)" placeholder ="Pesquise sua palavra aqui!"></ion-searchbar>
   <ion-list>
     <ion-item *ngFor="let giria of girias">
       {{ giria }}
@@ -23,19 +23,19 @@
 
   <ion-card *ngFor="let giria of giriasItems">
     <ion-card-header>
-      {{giria.titulo}}
+    <b>  {{giria.titulo}}</b>
     </ion-card-header>
     <ion-card-content>
-      {{giria.traducaoTitulo}}
+        {{giria.traducaoTitulo}}
     </ion-card-content>
     <ion-card-header>
-      Significado
+    <b>  Significado</b>
     </ion-card-header>
     <ion-card-content>
     {{giria.descricao}}
     </ion-card-content>
     <ion-card-header>
-      Exemplo
+      <b>Exemplo</b>
     </ion-card-header>
     <ion-card-content>
       {{giria.exemplo}}
@@ -44,6 +44,9 @@
     {{giria.exemploTrad}}
     </ion-card-content>
   </ion-card>
+
+
+
 
 
 </ion-content>
