--- a/src/pages/ditado-popular/ditado-popular.html
+++ b/src/pages/ditado-popular/ditado-popular.html
@@ -22,4 +22,28 @@
     </ion-item>
   </ion-list>
 
+  <ion-card *ngFor="let ditado of ditadoItems">
+    <ion-card-header>
+    <b>  {{ditado.titulo}}</b>
+    </ion-card-header>
+    <ion-card-content>
+        {{ditado.traducaoTitulo}}
+    </ion-card-content>
+    <ion-card-header>
+    <b>  Significado</b>
+    </ion-card-header>
+    <ion-card-content>
+    {{ditado.descricao}}
+    </ion-card-content>
+    <ion-card-header>
+      <b>Exemplo</b>
+    </ion-card-header>
+    <ion-card-content>
+      {{ditado.exemplo}}
+    </ion-card-content>
+    <ion-card-content>
+    {{ditado.exemploTrad}}
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
