Ajuste layout Cards

--- a/src/pages/ditado-popular/ditado-popular.html
+++ b/src/pages/ditado-popular/ditado-popular.html
@@ -27,7 +27,7 @@
     <b>  {{ditado.titulo}}</b>
     </ion-card-header>
     <ion-card-content>
-        {{ditado.traducaoTitulo}}
+        Tradução Livre: {{ditado.traducaoTitulo}}
     </ion-card-content>
     <ion-card-header>
     <b>  Significado</b>
@@ -42,7 +42,7 @@
       {{ditado.exemplo}}
     </ion-card-content>
     <ion-card-content>
-    {{ditado.exemploTrad}}
+    Tradução: {{ditado.exemploTraducao}}
     </ion-card-content>
   </ion-card>
 
