--- a/src/pages/girias/girias.html
+++ b/src/pages/girias/girias.html
@@ -26,7 +26,7 @@
     <b>  {{giria.titulo}}</b>
     </ion-card-header>
     <ion-card-content>
-        {{giria.traducaoTitulo}}
+        Tradução Livre: {{giria.traducaoTitulo}}
     </ion-card-content>
     <ion-card-header>
     <b>  Significado</b>
@@ -41,7 +41,7 @@
       {{giria.exemplo}}
     </ion-card-content>
     <ion-card-content>
-    {{giria.exemploTrad}}
+    Tradução: {{giria.exemploTraducao}}
     </ion-card-content>
   </ion-card>
 
