--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Profile</ion-title>
+    <ion-title>Perfil</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="logOut()">
         <ion-icon name="log-out"></ion-icon>
@@ -12,26 +12,29 @@
 <ion-content padding>
   <ion-list>
     <ion-list-header>
-      Personal Information
+      Informações Pessoais
     </ion-list-header>
     <ion-item (click)="updateName()">
       <ion-grid>
         <ion-row>
-          <ion-col col-6> Name </ion-col>
+          <ion-col col-6> Nome </ion-col>
           <ion-col col-6 *ngIf="userProfile?.firstName || userProfile?.lastName">
             {{userProfile?.firstName}} {{userProfile?.lastName}}
           </ion-col>
           <ion-col col-6 class="placeholder-profile" *ngIf="!userProfile?.firstName">
-            <span> Tap here to edit. </span>
+            <span> Aperte aqui para editar! </span>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-item>
     <ion-item>
-      <ion-label class="dob-label">Date of Birth</ion-label>
+      <ion-label class="dob-label">Data de nascimento</ion-label>
+      
       <ion-datetime displayFormat="MMM D, YYYY" pickerFormat="D MMM YYYY" [(ngModel)]="birthDate"
         (ionChange)="updateDOB(birthDate)"></ion-datetime>
+
     </ion-item>
+
     <ion-item (click)="updateEmail()">
       <ion-grid>
         <ion-row>
@@ -40,7 +43,7 @@
             {{userProfile?.email}}
           </ion-col>
           <ion-col col-6 class="placeholder-profile" *ngIf="!userProfile?.email">
-            <span> Tap here to edit. </span>
+            <span> Aperte aqui para editar! </span>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -49,9 +52,9 @@
     <ion-item (click)="updatePassword()">
       <ion-grid>
         <ion-row>
-          <ion-col col-6> Password </ion-col>
+          <ion-col col-6> Senha </ion-col>
           <ion-col col-6 class="placeholder-profile">
-            <span> Tap here to edit. </span>
+            <span> Aperte aqui para editar! </span>
           </ion-col>
         </ion-row>
       </ion-grid>
