Adicionado tabelas para alimebtar banco em JSON

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -43,9 +43,9 @@ TESTE
   <button ion-button block color="primary" (click)="goDitado()">
     Ditado Popular
   </button>
-
+<!--
   <button ion-button block color="primary" (click)="goApresentacao()">
     Teste Splash
-  </button>
+  </button> -->
 
 </ion-content>
