Adicionado Arquivos de Apoio de Imagem e Config.xml
Alterado o nome padrão do aplicativo e descrição.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,20 +28,20 @@ TESTE
     See your events
   </button>
 -->
-  <button ion-button block color="primary" (click)="goGirias()">
+  <button ion-button block color="secondary" (click)="goGirias()">
     Girias
   </button>
 
-  <button ion-button block color="primary" (click)="goPhrasal()">
-    Phrasal Verbsr
+  <button ion-button block color="secondary" (click)="goPhrasal()">
+    Verbos Frasais
   </button>
 
-  <button ion-button block color="primary" (click)="goExpressao()">
-    Expressão Idiomatica
+  <button ion-button block color="secondary" (click)="goExpressao()">
+    Expressões Idiomaticas
   </button>
 
-  <button ion-button block color="primary" (click)="goDitado()">
-    Ditado Popular
+  <button ion-button block color="secondary" (click)="goDitado()">
+    Ditados Populares
   </button>
 <!--
   <button ion-button block color="primary" (click)="goApresentacao()">
